--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,115 +1,134 @@
 .about-us {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: var(--about-us-background-color);
-    background-size: auto;
-    padding-bottom: 75px;
-    padding-top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--about-us-background-color);
+  background-size: auto;
+  padding-bottom: 75px;
+  padding-top: 60px;
+  justify-content: center;
 }
 
 .wave-container-about-us {
-    width: 100%;
+  width: 100%;
 }
 
 .wave_brand_color {
-    height: 75px;
-    margin-top: -110px;
-    width: 100%;
+  height: 75px;
+  margin-top: -110px;
+  width: 100%;
 }
 
 .about-us__text {
-    display: block;
-    text-align: center;
-    font-family: Source Sans, sans-serif;
-    font-size: 1.25rem;
-    font-weight: 500;
-    letter-spacing: 0.4px;
-    color: rgb(240, 240, 240);
-    padding-bottom: 23px;
-    line-height: 30px;
-    margin: 0 auto;
+  display: flex;
+  text-align: center;
+  font-family: Source Sans, sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  color: rgb(240, 240, 240);
+  padding-bottom: 23px;
+  line-height: 30px;
+  margin: 0 auto;
 }
 
 .about-us__title {
-    text-align: center;
-    font-family: Leckerli One, cursive;
-    line-height: 14px;
-    color: var(--title-color);
-    padding-top: 23px;
-    padding-bottom: 12px;
-    font-size: 1.06rem;
-    margin-bottom: 20px;
+  text-align: center;
+  font-family: Leckerli One, cursive;
+  line-height: 14px;
+  color: var(--title-color);
+  padding-top: 23px;
+  padding-bottom: 12px;
+  font-size: 1.06rem;
+  margin-bottom: 20px;
 }
 
 .about-us__subtitle {
-    text-align: center;
-    font-family: Dangrek, cursive;
-    font-size: 2.13rem;
-    line-height: 45.1px;
-    margin-bottom: 25px;
-    color: rgb(255, 255, 255);
-    font-weight: 400;
+  text-align: center;
+  font-family: Dangrek, cursive;
+  font-size: 2.13rem;
+  line-height: 45.1px;
+  margin-bottom: 25px;
+  color: rgb(255, 255, 255);
+  font-weight: 400;
 }
 
 .about-us__main-text {
-    text-align: center;
-    align-items: center;
-    font-family: Source Sans, sans-serif;
-    font-size: 1.125rem;
-    font-weight: 400;
-    color: rgb(224, 221, 221);
-    line-height: 28.8px;
-    display: block;
+  text-align: center;
+  font-family: Source Sans, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(224, 221, 221);
+  line-height: 28.8px;
+  display: flex;
+  justify-content: center;
 }
 
 .about-us__cards {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    vertical-align: baseline;
-    line-height: 28.8px;
-    justify-content: center;
-}    
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  vertical-align: baseline;
+  line-height: 28.8px;
+  justify-content: center;
+  margin-top: 50px;
+}
 
 .cards__experience {
-    align-items: center;
-    display: block;
-    flex-direction: column;
-    text-align: center;
-    padding-left: 15px;
-    padding-right: 15px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  justify-content: center;
 }
 
 .cards__title {
-    text-align: center;
-    font-size: 2.125rem;
-    margin: 10px 0 10px 0;
-    font-weight: 400;
-    font-family: Dangrek;
-    color: rgb(255, 255, 255);
+  text-align: center;
+  font-size: 2.125rem;
+  margin: 10px 0 10px 0;
+  font-weight: 400;
+  font-family: Dangrek;
+  color: rgb(255, 255, 255);
 }
 
 .cards__text {
-    text-align: center;
-    font-family: Source Sans, sans-serif;
-    letter-spacing: 0.4px;
-    font-size: 1.25rem;
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    padding-bottom: 23px;
-    line-height: 30px;
+  text-align: center;
+  font-family: Source Sans, sans-serif;
+  letter-spacing: 0.4px;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+  padding-bottom: 23px;
+  line-height: 30px;
 }
 
 .cards__images {
-    width: 100%;
-    height: auto;
-    max-width: 40px;
-    min-width: 26px;
-    max-height: 40px;
-    min-height: 26px;
-    line-height: 28.8px;
-    display: block;
-    align-items: center;
+  width: 100%;
+  height: auto;
+  max-width: 40px;
+  min-width: 26px;
+  max-height: 40px;
+  min-height: 26px;
+  line-height: 28.8px;
+  display: block;
+  align-items: center;
 }
 
+@media (max-width: 750px) {
+  .about-us {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+@media (min-width: 751px) {
+  .about-us {
+    display: flex;
+    flex-direction: column;
+    column-gap: 32px;
+  }
+}
