--- a/css/contacts-header.css
+++ b/css/contacts-header.css
@@ -1,5 +1,5 @@
 .header {
-    background: rgb(240, 191, 76);
+    background: rgb(254,196,82);
     padding: 1.5rem;
     padding-top: 1rem;
   }
@@ -13,7 +13,7 @@
 .contacts__title-text {
     font-family: "Dangrek", cursive;
     font-size: 2.125rem;
-    color: var(--title-color);
+    color: var( --contacts-text-color);
     font-weight: 400;
     line-height: 37.4px;
 }
