--- a/css/blog.css
+++ b/css/blog.css
@@ -33,7 +33,7 @@
 
 .blog__advice {
     color: var(--subtitle-color);
-    font-family: Source Sans, sans-serif;
+    font-family: "Source Sans 3", sans-serif;
     font-size: 1.25rem;
     font-weight: 500;
     letter-spacing: 0.4px;
@@ -67,7 +67,7 @@
 }
 
 .blog__article-text {
-    font-family: Source Sans, sans-serif;
+    font-family: "Source Sans 3", sans-serif;
     font-size: 1.13rem;
     line-height: 29px;
     color: var(--text-color);
@@ -78,7 +78,7 @@
     height: 75px;
 }
 
-@media(min-width: 750px){
+@media(min-width: 750px) {
     .blog__acticles-overview {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -94,4 +94,3 @@
         column-gap: 32px;
     }
 }
-
