--- a/css/contacts-sections.css
+++ b/css/contacts-sections.css
@@ -6,21 +6,14 @@
 .contacts__content {
     display: flex;
     flex-direction: column;
-    margin: 0 0 100px 30px;
-    max-width: 1200px;
+    margin-left: 54px;
 }
 
 .contacts__phone, .contacts__email, .contacts__address, .contacts__hours {
-    width: 250px;
     margin-top: 70px;
     margin-bottom: 30px;
     text-align: left;
 }
-
-.contacts__phone-text, .contacts__email-text, .contacts__address-text, .contacts__hours-text {
-    padding-left: 6px;
-}
-
 
 .contacts__icons {
     width: 65px;
@@ -61,10 +54,82 @@
 
 @media (min-width: 800px) {
     .contacts__content {
+        max-width: 1200px;
+        padding-top: 70px;
         margin: 0 auto;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;      
     }
+}
+
+.form__map {
+    width: 80%;
+}
+
+.contacts__form {
+    background-color: rgb(248,185,60);
+    background-size: cover;
+}
+
+.contacts__form-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.contacts__application-form { 
+    border-radius: 6px;
+    border-color: rgb(50,38,75);
+    background: rgb(254,196,82);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 56px;
+    height: 623px;
+    width: 80%;
+}
+
+.form__title-text {
+    font-family: "Dangrek", cursive;
+    font-size: 2.125rem;
+    color: var( --contacts-text-color);
+    font-weight: 400;
+    line-height: 37.4px;
+}
+
+.form__title {
+    margin-top: 45px;
+}
+
+.form__sub-title {
+    width: 80%;
+    text-align: center;
+}
+
+.form__sub-title-text {
+    font-family: "Source Sans 3", sans-serif;
+    font-size: 1.125rem;
+    color: var( --contacts-text-color);
+    font-weight: 400;
+    line-height: 21.6px;
+}
+
+.form-contacts {
+    width: 80%;
+    margin-top: 13px;
+    margin-bottom: 17px;
+    box-sizing: border-box;
+    background-color: rgb(248,185,60);
+    border-radius: 27px;
+    border-style: hidden;
+    border-color: #493b5f;
+    color: var( --contacts-text-color);
+    font-family: "Source Sans 3", sans-serif;
+    font-size: 1rem;
+    font-weight: 400;
+    padding: 15px 30px 15px 30px;
 }
 
