--- a/css/contacts-sections.css
+++ b/css/contacts-sections.css
@@ -63,9 +63,7 @@
     }
 }
 
-.form__map {
-    width: 80%;
-}
+
 
 .contacts__form {
     background-color: rgb(248,185,60);
@@ -77,6 +75,15 @@
     flex-direction: column;
     align-items: center;
     padding-top: 20px;
+}
+
+.form__map {
+    width: 80%;
+}
+
+.contacts__form-map {
+    width: 100%;
+    height: 700px;
 }
 
 .contacts__application-form { 
