--- a/css/about-us.css
+++ b/css/about-us.css
@@ -19,6 +19,10 @@
   width: 100%;
 }
 
+.about-us .container {
+  text-align: center;
+}
+
 .about-us__text {
     display: flex;
     text-align: center;
@@ -56,7 +60,7 @@
 .about-us__main-text {
     text-align: center;
     font-family: "Source Sans 3", sans-serif;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: 400;
     color: rgb(224, 221, 221);
     line-height: 28.8px;
@@ -120,29 +124,23 @@
   align-items: center;
 }
 
-@media (max-width: 750px) {
-  .about-us {
-    display: grid;
-    grid-template-columns: 1fr;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
 @media(max-width: 750px) {
     .about-us {
-        display: grid;
-        flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
 		align-items: center;
     }
+    .about-us__cards {
+      flex-direction: column;
+    }
 }
 
-@media(max-width: 1200px) {
+@media(min-width: 751px) {
     .about-us {
         display: flex;
         flex-direction: column;
         column-gap: 32px;
+        max-width: 992px;
     }
 }
 
