--- a/css/contacts-sections.css
+++ b/css/contacts-sections.css
@@ -61,6 +61,10 @@
         flex-direction: row;
         justify-content: space-around;      
     }
+
+    .contacts__phone, .contacts__email, .contacts__address, .contacts__hours {
+        max-width: 250px;
+    }
 }
 
 
@@ -78,12 +82,13 @@
 }
 
 .form__map {
-    width: 80%;
+    width: 87%;
 }
 
 .contacts__form-map {
     width: 100%;
-    height: 700px;
+    min-height: 645px;
+    max-width: 550px;
 }
 
 .contacts__application-form { 
@@ -93,10 +98,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 130px;
     margin-top: 56px;
-    height: 623px;
-    width: 80%;
+    min-height: 645px;
+    width: 87%;
+    max-width: 740px;
 }
 
 .form__title-text {
@@ -138,5 +144,28 @@
     font-size: 1rem;
     font-weight: 400;
     padding: 15px 30px 15px 30px;
+}
+
+@media (min-width:800px) {
+    .contacts__form-content {
+        margin: 0 auto;
+        padding-bottom: 70px;
+        max-width: 1100px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: stretch; 
+    }
+    
+    .contacts__form-map {
+        margin: 0;
+        width: 89%;
+    }
+
+    .contacts__application-form {
+        width: 70%;
+        margin: 0;
+    }
+
 }
 
