--- a/css/ingredients.css
+++ b/css/ingredients.css
@@ -43,7 +43,7 @@
 }
 
 .ingredients__text {
-  font-family: Source Sans, sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   font-size: 1.25rem;
   font-weight: 500;
   letter-spacing: 0.4px;
@@ -62,7 +62,7 @@
 }
 
 .ingredients__list {
-  font-family: Source Sans, sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
   color: var(--text-color);
@@ -70,7 +70,7 @@
 }
 
 .ingredients__main-text {
-  font-family: Source Sans, sans-serif;
+  font-family: "Source Sans 3", sans-serif;
   font-size: 1.125rem;
   font-weight: 400;
   color: rgb(185, 177, 197);
