--- a/css/about-us.css
+++ b/css/about-us.css
@@ -19,8 +19,9 @@
   width: 100%;
 }
 
-.about-us .container {
+.about-us__main-text.container {
   text-align: center;
+  max-width: 750px;
 }
 
 .about-us__text {
