add section book a table

--- a/css/global.css
+++ b/css/global.css
@@ -92,6 +92,7 @@ a {
   align-items: center;
   cursor: pointer;
   text-decoration: none;
+  border: none;
 }
 
 .mask-additional-button__block:hover {
