--- a/css/book-a-table.css
+++ b/css/book-a-table.css
@@ -81,14 +81,23 @@
     cursor: pointer;
 }
 
+.modal-lg{
+    width: 670px;
+}
 .modal-content {
+    margin: auto;
     background-color: var(--main-page-background-color);
+    width: 100%;
+    height: 850px;
+    border-radius: 0;
 }
 
 .modal-header {
+    height: 250px;
     display: flex;
     flex-direction: column;
     border-bottom: none;
+    margin-bottom: 0;
 }
 .header__btn-close{
     width: 100%;
@@ -98,12 +107,14 @@
     height: 23px;
     background-image: url("../img/book-a-table/icon-book-a-table-modal-close.svg");
     float: right;
+    cursor: pointer;
 }
 
 .modal-header__title {
     font-size: 1.3rem;
     font-family: 'Leckerli One', serif;
     color: var(--title-color);
+    margin-top: 50px;
 }
 
 .modal-header__sub-title {
@@ -119,15 +130,49 @@
     letter-spacing: 0.1ch;
 }
 
-.modal-body {
-
+.modal-body__form-book-table{
+    width: 100%;
+    height: 400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.modal-body__inputs-book-table{
-
+.form-book-table__inputs-book-table{
+    width: 70%;
+    height: 54px;
+    background-color: #45385b;
+    border: none;
+    color: #aaa3b4;
+    border-bottom: 2px solid var(--brand-color);
+    margin-top: 25px;
+    padding-left: 30px;
+    padding-right: 20px;
+}
+::placeholder{
+    color:#aaa3b4 ;
 }
 
 .modal-footer {
-
+    border-top: none;
+    margin: 30px 0 100px 0;
+}
+.btn-primary{
+    width: 70%;
+    height: 50px;
+    margin: auto;
+    border-radius: 50px;
+    border: none;
+    background-color: var(--brand-color);
+}
+.btn-primary:hover{
+    transition: 0.3s;
+    background-color: var(--about-us-main-color);
+}
+.btn-primary-text-book-table{
+    font-family: "Source Sans Pro", sans-serif;
+    font-size: 1rem;
+    color: var(--title-color);
 }
 
 @media (max-width: 991px) {
@@ -145,6 +190,12 @@
 }
 
 @media (max-width: 767px) {
+    .modal-body__inputs-book-table {
+        width: 90%;
+    }
+    .modal-lg{
+        width: 470px;
+    }
     .background__img {
         display: flex;
         flex-wrap: wrap;
@@ -182,6 +233,12 @@
 @media (max-width: 447px) {
     .book-table__block {
         width: 80%;
+    }
+}
+@media (max-width: 576px) {
+    .modal-lg{
+        width: 100%;
+        margin-left: 0;
     }
 }
 
