add dividers to about-us

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -25,16 +25,16 @@
 }
 
 .about-us__text {
-    display: flex;
-    text-align: center;
-    font-family: "Source Sans 3", sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    letter-spacing: 0.4px;
-    color: rgb(240, 240, 240);
-    padding-bottom: 23px;
-    line-height: 30px;
-    margin: 0 auto;
+  display: flex;
+  text-align: center;
+  font-family: "Source Sans 3", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.4px;
+  color: rgb(240, 240, 240);
+  padding-bottom: 23px;
+  line-height: 30px;
+  margin: 0 auto;
 }
 
 .about-us__title {
@@ -59,15 +59,15 @@
 }
 
 .about-us__main-text {
-    text-align: center;
-    font-family: "Source Sans 3", sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    color: rgb(224, 221, 221);
-    line-height: 28.8px;
-    display: flex;
-    justify-content: center;
-    max-width: 750px;
+  text-align: center;
+  font-family: "Source Sans 3", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: rgb(224, 221, 221);
+  line-height: 28.8px;
+  display: flex;
+  justify-content: center;
+  max-width: 750px;
 }
 
 .about-us__cards {
@@ -91,11 +91,18 @@
 }
 
 .about-us-images {
-    background-color: #a55376;
-    border-radius: 50%;
-    background-size: auto;
-    background-origin: padding-box;
-    border: 1rem solid #a55376;
+  background-color: #a55376;
+  border-radius: 50%;
+  background-size: auto;
+  background-origin: padding-box;
+  border: 1rem solid #a55376;
+}
+
+hr.solid {
+  height: 3px;
+  background-color: #a55376;
+  width: 10%;
+  line-height: 28.8px;
 }
 .cards__title {
   text-align: center;
@@ -104,17 +111,18 @@
   font-weight: 400;
   font-family: Dangrek;
   color: rgb(255, 255, 255);
+  line-height: 28.8px;
 }
 
 .cards__text {
-    text-align: center;
-    font-family: "Source Sans 3", sans-serif;
-    letter-spacing: 0.4px;
-    font-size: 18px;
-    font-weight: 500;
-    color: rgb(255, 255, 255);
-    padding-bottom: 23px;
-    line-height: 30px;
+  text-align: center;
+  font-family: "Source Sans 3", sans-serif;
+  letter-spacing: 0.4px;
+  font-size: 18px;
+  font-weight: 500;
+  color: rgb(255, 255, 255);
+  padding-bottom: 23px;
+  line-height: 30px;
 }
 
 .cards__images {
@@ -129,22 +137,20 @@
   align-items: center;
 }
 
-@media(max-width: 750px) {
-    .about-us {
-        flex-direction: column;
-        justify-content: center;
-		align-items: center;
-    }
-    .about-us__cards {
-      flex-direction: column;
-    }
+@media (max-width: 750px) {
+  .about-us {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-us__cards {
+    flex-direction: column;
+  }
 }
 
-@media(min-width: 751px) {
-    .about-us {
-        display: flex;
-        flex-direction: column;
-    }
+@media (min-width: 751px) {
+  .about-us {
+    display: flex;
+    flex-direction: column;
+  }
 }
-
-
