--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,12 +32,11 @@
   top: 0;
 }
 
-.animated-icon span:nth-child(2),
-.animated-icon span:nth-child(3) {
+.animated-icon span:nth-child(2) {
   top: 7px;
 }
 
-.animated-icon span:nth-child(4) {
+.animated-icon span:nth-child(3) {
   top: 14px;
 }
 
@@ -66,6 +65,9 @@ nav a:hover {
 
 .body__overflow {
   overflow: hidden;
+}
+.burger-cross{
+
 }
 
 @media (max-width: 991px) {
