update title about us

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -99,7 +99,6 @@
 }
 
 .divider-component {
-  padding-top: 15px;
   padding-bottom: 15px;
 }
 
@@ -110,6 +109,7 @@ hr.solid {
   border-top: 3px solid #a55376;
   opacity: 1;
 }
+
 .cards__title {
   text-align: center;
   font-size: 2.125rem;
@@ -118,6 +118,7 @@ hr.solid {
   font-family: Dangrek;
   color: rgb(255, 255, 255);
   line-height: 28.8px;
+  margin-top: 20px;
 }
 
 .cards__text {
