--- a/css/about-us.css
+++ b/css/about-us.css
@@ -7,6 +7,8 @@
   padding-bottom: 75px;
   padding-top: 60px;
   justify-content: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .wave-container-about-us {
